# multi-agent-demo

./: .env.example  .gitignore  DESIGN.md  README.md  demo.ipynb  demo.py  main.py  pyproject.toml
agents/: critique.py  judge.py  planner.py  worker_factory.py
demo_logs/: credential_theft.json  data_exfiltration.json  lateral_movement.json
utils/: visualization.py
